--- a/style.css
+++ b/style.css
@@ -731,6 +731,9 @@
         height: 823px;
         column-gap: 60px;
     }
+    .header{
+        height: 90px;
+    }
     .navMenu{
         width: 320px;
         height: 823px;
@@ -756,6 +759,10 @@
         z-index: 2;
         cursor: pointer;
         transition: all 1s ease;
+    }
+    .button_primary{
+        width: 270px;
+        text-align: center;
     }
     .img-burger{
         width: 30px;
